6-vnodes-old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
        scenario: "6"
    spec:
      containers:
      - name: nodeapp
        image: bencuk/nodejs-demoapp
        ports:
        - containerPort: 3000
        # resources:
        #   requests:
        #     cpu: 100m
        #   limits:
        #     cpu: 200m        
      nodeSelector:
        kubernetes.io/role: agent
        beta.kubernetes.io/os: linux
        type: virtual-kubelet
      tolerations:
      - key: virtual-kubelet.io/provider
        operator: Exists
      - key: azure.com/aci
        effect: NoSchedule
