6-vnodes-old/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nodeapp
  labels:
    scenario: "6"
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: nodeapp
